Fix: playing board spacing of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,14 +245,14 @@ h2 {
     #outcome {
         width: 99%;
         position: absolute;
-        top: 245px;
+        top: 280px;
         transform: translate(-1%, -10%);
     }
 
     #winner {
         width: 95%;
         position: absolute;
-        bottom: 55%;
+        bottom: 45%;
         left: 50%;
         transform: translate(-50%, 45%);
     }
